--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,14 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "description": "",
+  "main": "",
+  "moduleType": [],
+  "homepage": "",
+  "devDependencies": {
 
+  },
+  "dependencies": {
+  }
 }
