--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,8 @@
   "main": "",
   "moduleType": [],
   "homepage": "",
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "dependencies": {
+    "angular-translate": "^2.10.0"
   }
 }
