--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "homepage": "",
   "devDependencies": {},
   "dependencies": {
-    "angular-translate": "^2.10.0"
+    "angular-translate": "^2.10.0",
+    "angular-es-carousel": "*"
   }
 }
