--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.4.8",
     "angular-resource": "^1.4.9",
     "angular-ui-router": "^0.2.15",
+    "bower": "^1.7.9",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
